fixed five day forecast to display

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <div class="card-body">
                     <!-- Search Form -->
                     <form class="form-inline">
-                      <div class="form-group mb-2">
+                      <div class="form-group mb-2 form-control d-block">
                         <input type="search" class="form-control" id="cityInput" placeholder= "enter city"/>
                       </div>
                       <button type="submit" class="btn mb-2" id="searchBtn">Search
