updated UVI with alerts and fixed search bar and added delete button

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                       <button type="submit" class="form-control btn mb-3" id="searchBtn">Search
                         
                       </button>
+                      <button id="deleteBtn" class="form-control btn mb-3 btn-danger">Delete</button>
                     </form>
                     <!-- /Search Form -->
       
